--- a/html-level-1/assignment_1.html
+++ b/html-level-1/assignment_1.html
@@ -4,45 +4,81 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>CSS Project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h2><i>adoptme.com</i></h2>
-    <h1>Adopt a <span>Pet</span> Today</h1>
-    <br /><br />
-    <div id="pets">
-      <div class="card">
-        <img src="dog.jpg" alt="jerry" />
-        <h3>Meet Jerry</h3>
-        <p>
-          Jerry is a charming and friendly dog with a heart of gold, and he is
-          looking for a loving home to call his own. He is a medium-sized mixed
-          breed with soft, fluffy fur and soulful brown eyes that will melt your
-          heart. If you are looking for a loyal and loving companion who will
-          bring endless joy into your life, Jerry may be the perfect pet for
-          you. Adopting Jerry means giving him a second chance at a happy life,
-          and you will be rewarded with the unconditional love and companionship
-          that only a dog can provide. So don't hesitate to bring this wonderful
-          pup home today!
-        </p>
+    <div class="main_box">
+      <input type="checkbox" id="check" />
+      <div class="btn_one">
+        <label for="check" style="color: white">
+          <i class="fa-solid fa-bars"></i>
+        </label>
       </div>
-      <div class="card">
-        <img src="cat.jpg" alt="tom" />
-        <h3>Meet Tom</h3>
-        <p>
-          Tom is a handsome and affectionate cat who is looking for his forever
-          home. He is a medium-sized domestic shorthair with sleek black and
-          white fur and striking green eyes that will capture your heart. If you
-          are looking for a loyal and loving companion who will provide you with
-          endless joy and entertainment, Tom may be the perfect pet for you.
-          Adopting Tom means giving him a second chance at a happy life, and you
-          will be rewarded with the unconditional love and companionship that
-          only a cat can provide mhn mmmm . So why not bring this wonderful
-          feline into your life today?
-        </p>
+
+      <div class="sidebar_menu">
+        <div class="logo">
+          <a href="#">Apna College</a>
+        </div>
+
+        <div class="btn_two">
+          <label for="check" style="color: grey">
+            <i class="fa-solid fa-xmark"></i>
+          </label>
+        </div>
+
+        <div class="menu">
+          <ul>
+            <li>
+              <i class="fa-solid fa-image"></i>
+              <a href="#">Gallery</a>
+            </li>
+            <li>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              <a href="#">Shortcuts</a>
+            </li>
+            <li>
+              <i class="fa-solid fa-photo-film"></i>
+              <a href="#">Exhibits</a>
+            </li>
+            <li>
+              <i class="fa-solid fa-calendar-days"></i>
+              <a href="#">Events</a>
+            </li>
+            <li>
+              <i class="fa-solid fa-store"></i>
+              <a href="#">Store</a>
+            </li>
+            <li>
+              <i class="fa-solid fa-phone"></i>
+              <a href="#">Contact</a>
+            </li>
+            <li>
+              <i class="fa-regular fa-comments"></i>
+              <a href="#">Feedback</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="social_media">
+          <ul>
+            <a href="#"><i class="fa-brands fa-facebook"></i></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+          </ul>
+        </div>
       </div>
     </div>
-    <h4>a gift of new life</h4>
   </body>
 </html>
